kubernetes/apps/kube-system/cilium/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-relay
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Allow egress to Cilium agents (host, remote-node) on port 4244
    - to:
        - podSelector:
            matchLabels:
              k8s-app: cilium-agent
      ports:
        - port: 4244
          protocol: TCP
  ingress:
    # Allow ingress from Hubble UI on port 4245
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hubble-ui
              app.kubernetes.io/part-of: cilium
              k8s-app: hubble-ui
      ports:
        - port: 4245
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 4222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-ui
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hubble-relay
              app.kubernetes.io/part-of: cilium
              k8s-app: hubble-relay
      ports:
        - port: 4245
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 8081
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-relay
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
      - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
      app.kubernetes.io/part-of: cilium
      k8s-app: hubble-ui
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
      - kube-apiserver
